code/raw_code/cnn_enhancer_ortholog/logs/cnn_ocp_1006806_3.txt
Running cyclical learning rate for MSN_SN_hgRmMm_enhVsNonEnhOrth.
One-cycle policy training for 23 epochs.
Learning rates range: 0.001 - 0.01.
Momentum rates range: 0.85 - 0.99.
Dropout: 0.05.
In training mode.
There 174046 positives and 162366 negatives.
There 21926 positives and 20114 negatives.
Epoch 1/23
337/337 - 265s - loss: 0.6931 - accuracy: 0.5045 - macro_f1: 0.4256 - val_loss: 0.6926 - val_accuracy: 0.5301 - val_macro_f1: 0.5900
Epoch 2/23
337/337 - 265s - loss: 0.6913 - accuracy: 0.5250 - macro_f1: 0.5214 - val_loss: 0.6875 - val_accuracy: 0.5336 - val_macro_f1: 0.5101
Epoch 3/23
337/337 - 264s - loss: 0.6870 - accuracy: 0.5326 - macro_f1: 0.4781 - val_loss: 0.6849 - val_accuracy: 0.5393 - val_macro_f1: 0.4711
Epoch 4/23
337/337 - 264s - loss: 0.6850 - accuracy: 0.5403 - macro_f1: 0.4749 - val_loss: 0.6834 - val_accuracy: 0.5434 - val_macro_f1: 0.4764
Epoch 5/23
337/337 - 265s - loss: 0.6837 - accuracy: 0.5456 - macro_f1: 0.4862 - val_loss: 0.6816 - val_accuracy: 0.5535 - val_macro_f1: 0.5238
Epoch 6/23
337/337 - 265s - loss: 0.6816 - accuracy: 0.5534 - macro_f1: 0.5059 - val_loss: 0.6824 - val_accuracy: 0.5523 - val_macro_f1: 0.4503
Epoch 7/23
337/337 - 265s - loss: 0.6790 - accuracy: 0.5622 - macro_f1: 0.5246 - val_loss: 0.6830 - val_accuracy: 0.5517 - val_macro_f1: 0.4190
Epoch 8/23
337/337 - 265s - loss: 0.6746 - accuracy: 0.5732 - macro_f1: 0.5467 - val_loss: 0.6930 - val_accuracy: 0.5375 - val_macro_f1: 0.2968
Epoch 9/23
337/337 - 265s - loss: 0.6715 - accuracy: 0.5802 - macro_f1: 0.5625 - val_loss: 0.6665 - val_accuracy: 0.5898 - val_macro_f1: 0.5479
Epoch 10/23
337/337 - 265s - loss: 0.6679 - accuracy: 0.5892 - macro_f1: 0.5770 - val_loss: 0.6609 - val_accuracy: 0.6013 - val_macro_f1: 0.6438
Epoch 11/23
337/337 - 265s - loss: 0.6648 - accuracy: 0.5948 - macro_f1: 0.5881 - val_loss: 0.6623 - val_accuracy: 0.5962 - val_macro_f1: 0.6736
Epoch 12/23
337/337 - 265s - loss: 0.6630 - accuracy: 0.5975 - macro_f1: 0.5925 - val_loss: 0.6618 - val_accuracy: 0.6024 - val_macro_f1: 0.5722
Epoch 13/23
337/337 - 265s - loss: 0.6619 - accuracy: 0.5998 - macro_f1: 0.5954 - val_loss: 0.6552 - val_accuracy: 0.6127 - val_macro_f1: 0.6252
Epoch 14/23
337/337 - 267s - loss: 0.6583 - accuracy: 0.6068 - macro_f1: 0.6072 - val_loss: 0.6547 - val_accuracy: 0.6126 - val_macro_f1: 0.6731
Epoch 15/23
337/337 - 268s - loss: 0.6563 - accuracy: 0.6105 - macro_f1: 0.6120 - val_loss: 0.6640 - val_accuracy: 0.5943 - val_macro_f1: 0.6956
Epoch 16/23
337/337 - 268s - loss: 0.6543 - accuracy: 0.6138 - macro_f1: 0.6176 - val_loss: 0.6487 - val_accuracy: 0.6221 - val_macro_f1: 0.6315
Epoch 17/23
337/337 - 269s - loss: 0.6542 - accuracy: 0.6138 - macro_f1: 0.6161 - val_loss: 0.6509 - val_accuracy: 0.6171 - val_macro_f1: 0.5949
Epoch 18/23
337/337 - 269s - loss: 0.6534 - accuracy: 0.6159 - macro_f1: 0.6187 - val_loss: 0.6464 - val_accuracy: 0.6248 - val_macro_f1: 0.6367
Epoch 19/23
337/337 - 269s - loss: 0.6490 - accuracy: 0.6221 - macro_f1: 0.6294 - val_loss: 0.6435 - val_accuracy: 0.6280 - val_macro_f1: 0.6392
Epoch 20/23
337/337 - 270s - loss: 0.6468 - accuracy: 0.6246 - macro_f1: 0.6310 - val_loss: 0.6499 - val_accuracy: 0.6166 - val_macro_f1: 0.6946
Epoch 21/23
337/337 - 269s - loss: 0.6525 - accuracy: 0.6156 - macro_f1: 0.6155 - val_loss: 0.6460 - val_accuracy: 0.6235 - val_macro_f1: 0.6833
Epoch 22/23
337/337 - 270s - loss: 0.6444 - accuracy: 0.6280 - macro_f1: 0.6360 - val_loss: 0.6418 - val_accuracy: 0.6335 - val_macro_f1: 0.6294
Epoch 23/23
337/337 - 269s - loss: 0.6426 - accuracy: 0.6313 - macro_f1: 0.6384 - val_loss: 0.6382 - val_accuracy: 0.6381 - val_macro_f1: 0.6699
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
